--- a/index.html
+++ b/index.html
@@ -4,27 +4,131 @@
         <meta description="Build long-lasting relationships with your customers.">
         <meta charset="utf-8">
         <link rel="stylesheet" href="./src/styles/index.css">
+
     </head>
     <body>
         <header>
-            <h2>Rewardify</h2>
+            <div id="title">
+                <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path id="Vector" d="M10.2518 29.2576C8.46741 28.666 6.8759 27.7697 5.45296 26.5898C3.68372 25.1226 2.32585 23.3294 1.3605 21.2406C0.630015 19.6601 0.192216 17.9974 0.0500746 16.2678C-0.0336295 15.2492 -0.0126132 14.2273 0.114769 13.2022C0.259285 12.0392 0.504482 10.9073 0.923269 9.81981C2.356 6.09939 4.84518 3.32099 8.41812 1.53823C11.173 0.163631 14.0978 -0.276174 17.1273 0.164675C21.5226 0.804286 24.9872 3.00561 27.4805 6.67414C28.9743 8.87201 29.8065 11.3129 29.9684 13.9919C30.1248 16.5778 29.7053 19.0372 28.6052 21.3767C27.7177 23.2639 26.4914 24.904 24.9189 26.2782C23.4753 27.5397 21.852 28.4864 20.0517 29.1605C17.6741 30.0507 15.2287 30.1305 12.7524 29.8695C11.9086 29.7805 11.078 29.564 10.2518 29.2576ZM18.2428 6.46732C21.4198 10.8241 20.4559 16.9899 16.077 20.1485C13.8921 21.7246 11.4283 22.3321 8.78236 21.8402C5.38721 21.209 3.02 19.1939 1.54305 16.0312C1.7683 20.7348 5.11819 26.4755 11.7623 28.1648C17.8291 29.7073 24.3073 26.8306 27.1949 20.95C30.0608 15.1138 28.4187 7.92417 22.8517 3.97135C21.0089 2.66288 18.9557 1.88631 16.7119 1.57966C14.2538 1.24373 11.2298 1.7962 10.1912 2.46083C11.7751 2.50911 13.2783 2.7524 14.6828 3.4641C16.095 4.17973 17.2721 5.16213 18.2428 6.46732ZM2.50925 14.2455C3.96646 19.6986 9.43492 21.3738 12.7434 20.1262C9.54196 19.4975 7.61444 17.6126 7.42364 14.3323C7.2725 11.7338 8.50512 9.70045 10.9097 8.68583C14.0284 7.36989 16.5618 8.40582 18.5285 11.1493C18.5118 10.5744 18.3804 10.0966 18.2217 9.61693C17.5001 7.43603 16.0858 5.8501 14.0677 4.80145C12.6527 4.0662 11.1302 3.83558 9.549 4.00227C7.42224 4.22648 5.65229 5.1713 4.28302 6.79087C3.23228 8.03368 2.55602 9.46767 2.34157 11.121C2.20574 12.1682 2.27039 13.1782 2.50925 14.2455ZM10.7471 17.7817C12.382 18.9259 14.2572 18.9246 15.7952 17.8288C17.3511 16.7203 18.0124 15.1554 17.6552 13.2209C17.2143 10.8331 14.7746 9.12888 12.3289 9.74286C10.4959 10.203 9.31743 11.4014 8.96629 13.2453C8.62096 15.0586 9.21023 16.6064 10.7471 17.7817Z" fill="#F4BF42"/>
+                </svg>
+                <h2>Rewardify</h2>
+            </div>
             <div id="header-center">
-                <a href="./featuress.html">Features</a>
+                <a href="./features.html">Features</a>
                 <a href="./pricing.html">Pricing</a>
                 <a href="./resources.html">Resources</a>
             </div>
-            <a>Log In</a>
-            <button id="button-signUp">Sign Up</button>
+            <a id="link-login">Log In</a>
+            <button id="button-signUp">Get Started</button>
         </header>
         <main>
             <div id="cover">
                 <div id="cover-left">
-                    <h1>Form long-lasting <br>connections<br> with your customers</h1>
-                    <h3>Creating a loyal customer base has never been easier.</h3>
+                    <h1>Form long lasting <br>connections with<br> your customers</h1>
+                        <p>We believe in helping businesses retain their customer base
+                            <br>without any hassle. We make it easy for you to start
+                            <br>a loyalty program that is tailored to your business.</p> 
                     <button id="button-getStarted">Get Started</button>
                 </div>
                 <img src="./src/assets/gifs/nav-gif.gif">
             </div>
+            <br>
+            <h1>Built to power your business.</h1>
+            <h3>We offer you the best ways to make a profitable loyalty program that keeps<br>customers coming back.</h3>
+            <div id="cards">
+                <div class="card">
+                    <div class="card-icon"></div>
+                    <div class="card-inner">
+                        <h2>Points</h2>
+                        <h3>Customers gain points that can be redeemed for various rewards</h3>
+                        <a>Learn more</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-icon"></div>
+                    <div class="card-inner">
+                        <h2>Tiers</h2>
+                        <h3>Members are rewarded for purchases, increasing their benefits</h3>
+                        <a>Learn more</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-icon"></div>
+                    <div class="card-inner">
+                        <h2>Subscriptions</h2>
+                        <h3>Members pay a monthly / yearly fee to join and gain exclusive perks</h3>
+                        <a>Learn more</a>
+                    </div>
+                </div>
+            </div>
+            <div id="cover2">
+                <div id="cover2-left">
+                    <h1>Keep the customers<br>you work so hard to get</h1>
+                    <h3 id="cover2-left-caption">Leverage the power of your loyalty program<br>to keep your customers, and gain some too.</h3>
+                    <div id="cover2-left-points">
+                        <h3><strong>Choose your format.</strong> Choose which method you wish to run<br>your program.</h3>
+                        <h3><strong>Integrate the app.</strong> Integrate the app seamlessly with your<br>current purchase methods.</h3>
+                    </div>
+                </div>
+                <img id="cover2-img" src="./src/assets/gifs/new.gif">
+            </div>
+            <div id="cover3">
+                <img id="cover3-img" src="./src/assets/gifs/analytics-gif.gif">
+                <div id="cover3-right">
+                    <h1>Simple deployment,<br>Effortless management</h1>
+                    <h3 id="cover3-right-caption">We make it simple to deploy your loyalty program and<br>manage everything about it.</h3>
+                    <div id="cover3-right-points">
+                        <h3><strong>Seamless deployment.</strong> Easily customize, manage, and<br>deploy your loyalty program in just a few clicks.</h3>
+                        <h3><strong>Manage your customer base.</strong> Manage your customer’s <br>points and information with a simple admin panel.</h3>
+                        <h3><strong>Powerful analytics.</strong> Watch your loyalty program flourish <br>with detailed and powerful analytics at your fingertips.</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div id="end">
+                <h1>Watch your business flourish</h1>
+                <h1>Start your loyalty journey today.</h1>
+                <h3>Get started in just a few clicks, its simple!</h3>
+                <button id="button-signUp2">Get Started</button>
+            </div>
         </main>
+
+        <div class="footer">
+            <div class="footer-main">
+                <div class="footer-left">
+                    <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path id="Vector" d="M10.2518 29.2576C8.46741 28.666 6.8759 27.7697 5.45296 26.5898C3.68372 25.1226 2.32585 23.3294 1.3605 21.2406C0.630015 19.6601 0.192216 17.9974 0.0500746 16.2678C-0.0336295 15.2492 -0.0126132 14.2273 0.114769 13.2022C0.259285 12.0392 0.504482 10.9073 0.923269 9.81981C2.356 6.09939 4.84518 3.32099 8.41812 1.53823C11.173 0.163631 14.0978 -0.276174 17.1273 0.164675C21.5226 0.804286 24.9872 3.00561 27.4805 6.67414C28.9743 8.87201 29.8065 11.3129 29.9684 13.9919C30.1248 16.5778 29.7053 19.0372 28.6052 21.3767C27.7177 23.2639 26.4914 24.904 24.9189 26.2782C23.4753 27.5397 21.852 28.4864 20.0517 29.1605C17.6741 30.0507 15.2287 30.1305 12.7524 29.8695C11.9086 29.7805 11.078 29.564 10.2518 29.2576ZM18.2428 6.46732C21.4198 10.8241 20.4559 16.9899 16.077 20.1485C13.8921 21.7246 11.4283 22.3321 8.78236 21.8402C5.38721 21.209 3.02 19.1939 1.54305 16.0312C1.7683 20.7348 5.11819 26.4755 11.7623 28.1648C17.8291 29.7073 24.3073 26.8306 27.1949 20.95C30.0608 15.1138 28.4187 7.92417 22.8517 3.97135C21.0089 2.66288 18.9557 1.88631 16.7119 1.57966C14.2538 1.24373 11.2298 1.7962 10.1912 2.46083C11.7751 2.50911 13.2783 2.7524 14.6828 3.4641C16.095 4.17973 17.2721 5.16213 18.2428 6.46732ZM2.50925 14.2455C3.96646 19.6986 9.43492 21.3738 12.7434 20.1262C9.54196 19.4975 7.61444 17.6126 7.42364 14.3323C7.2725 11.7338 8.50512 9.70045 10.9097 8.68583C14.0284 7.36989 16.5618 8.40582 18.5285 11.1493C18.5118 10.5744 18.3804 10.0966 18.2217 9.61693C17.5001 7.43603 16.0858 5.8501 14.0677 4.80145C12.6527 4.0662 11.1302 3.83558 9.549 4.00227C7.42224 4.22648 5.65229 5.1713 4.28302 6.79087C3.23228 8.03368 2.55602 9.46767 2.34157 11.121C2.20574 12.1682 2.27039 13.1782 2.50925 14.2455ZM10.7471 17.7817C12.382 18.9259 14.2572 18.9246 15.7952 17.8288C17.3511 16.7203 18.0124 15.1554 17.6552 13.2209C17.2143 10.8331 14.7746 9.12888 12.3289 9.74286C10.4959 10.203 9.31743 11.4014 8.96629 13.2453C8.62096 15.0586 9.21023 16.6064 10.7471 17.7817Z" fill="#F4BF42"/>
+                    </svg>
+                    <h3>A loyalty program for growing your business</h3>
+                </div>
+                <div class="footer-column">
+                    <h3>Features</h3>
+                    <a>Points</a>
+                    <a>Tiers</a>
+                    <a>Subscriptions</a>
+                    <a>Charity</a>
+                </div>
+                <div class="footer-column">
+                    <h3>Support</h3>
+                    <a>Blog</a>
+                    <a>Newsletter</a>
+                    <a>Dev News</a>
+                    <a>Docs</a>
+                </div>
+                <div class="footer-column">
+                    <h3>Company</h3>
+                    <a>About</a>
+                </div>
+                <div class="footer-column">
+                    <h3>Legal</h3>
+                    <a>Privacy Policy</a>
+                    <a>Terms of Service</a>
+                </div>
+            </div>
+            <div class="footer-end">
+                <h4>© 2024 Dynamic Software Group. All rights reserved.</h4>
+            </div>
+        </div>
     </body>
 </html>
